--- a/index.html
+++ b/index.html
@@ -300,6 +300,61 @@
                     </div>
                     <!-- end row -->
 
+                    <!-- row -->
+                    <BR>
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <div class="card h-100">
+                            <div class="card-header">
+                              College notes: Spanish content. CONTENIDO EN ESPAÑOL.
+                            </div>
+                            <img src="screens/uade.png" class="card-img-top" alt="UADE">
+                            <div class="card-body">
+                              <h5 class="card-title">College notes</h5>
+                              <p class="card-text">
+                                All my notes during my university career, Bachelor of Computer Science, UADE, Argentina.
+                                <br>
+                                Released for the benefit of humanity, and especially future colleagues.
+                                <br>
+                                I am always ready to share the information, and help future professionals.
+                              </p>
+
+                              <a href="https://github.com/alvarogonzalezferrer/UADE_apuntes_licenciatura_informatica" class="btn btn-primary" target='_blank'>Get your notes!</a>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="col-sm-6">
+                          <div class="card h-100">
+                            <div class="card-header">
+                              Get your motor runnin',
+                              Head out on the highway,
+                              Lookin' for adventure,
+                              And whatever comes our way
+                            </div>
+                            <img src="screens/harley.jpg" class="card-img-top" alt="Open Source">
+                            <div class="card-body">
+                              <h5 class="card-title">Harley Davidson Argentina tips & tricks</h5>
+                              <p class="card-text">
+                                Alternative parts list for Harley Davidson Sportster available in Argentina.
+                                <br>
+                                Given the country's situation, with constant import bans, it becomes difficult to keep an imported motorcycle running.
+                                <br>
+                                That's why I compiled, over more than 16 years, a list of alternative parts to keep the Harley Davidson Sportster running in optimal condition.
+                                <br>
+                                This project starts in 2004, when I bought my first HD XL883.
+                                <br>
+                                SPANISH CONTENT ahead.
+                              </p>
+                              <p>
+                                <a href="https://github.com/alvarogonzalezferrer" class="btn btn-primary" target='_blank'>Get your motor runnin'</a>
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- end row -->
+
                   </div>
 
 
@@ -312,6 +367,10 @@
                   <script>
                   // TODO resize properly , this was done in a rush : https://stackoverflow.com/questions/1664785/resize-html5-canvas-to-fit-window
                   // TODO move all this to a proper .js file
+                  // TODO read this carefully and fix the resize : https://webglfundamentals.org/webgl/lessons/webgl-anti-patterns.html
+                  // TODO useful: https://webgl2fundamentals.org/
+                  // TODO useful: https://webglfundamentals.org/
+
                   // matrix effect on canvas
                   var c = document.getElementById("responsive-canvas");
                   // set height according to size of window
