--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <!-- Bootstrap CSS -->
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/cyborg/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/lux/bootstrap.min.css">
+
 <title>Álvaro González Ferrer - developer page</title>
 </head>
 <body>
@@ -16,17 +17,19 @@
     <h2>Graduated in Computer Science</h2>
 
     <p>
-      Thanks for visiting my page!
-      <br>
-      Im Álvaro, also known as Krono, Kronopio and many others "noms de guerre".
-      <br>
-      Have been developing software since I was a kid, starting in a old Commodore 64.
-      <br>
-      I'm a Computer Science graduate from Argentina, game developer, and hobbyist with many interests..
-      <br>
-      I have many years of experience as indie game developer, and also developed for some very known game studios, and business software for small enterprises.
-      <br>
-      I often release source code of my projects, when I have the proper license to do so. Many others of my projects are secret, or protected by intellectual rights, and I cannot release them, so thanks for asking, but no ;)
+    Thanks for visiting my page!</p>
+    <p>
+    Im Álvaro, also known as Krono, Kronopio and many others "noms de guerre".</p>
+    <p>
+    Have been developing software since I was a kid, starting in a old Commodore 64.</p>
+    <p>
+    I'm a Computer Science graduate from Argentina, game developer, and hobbyist with many interests..</p>
+    <p>
+    I have many years of experience as indie game developer, and also developed for some very known game studios, and business software for small enterprises.</p>
+    <p>
+    I often release source code of my projects, when I have the proper license to do so.</p>
+    <p>
+    Many others of my projects are protected by non-disclosure agreements, and I cannot release them.
     </p>
 
     <p>Some of my repositories, I'm always releasing new code, check it often!</p>
@@ -41,7 +44,16 @@
 
     <h2>Portfolio</h2>
 
-    <p>I have worked on many, many, many diverse projects. This are just a few, the featured ones are mostly released freely to the public as open source software. The commercial projects are non released because of copyright reasons.</p>
+    <p>I have worked on many, many, many diverse projects.</p>
+    <p>
+    This are just a few, the featured ones are mostly released freely to the public as open source software. </p>
+    <p>
+    Some of my skills are: C++, Java, Javascript, PHP, MySQL, MongoDB, Node.js, Express, Angular.js, jQuery, Bootstrap, HTML5, CSS, Pascal, BASIC, etc. </p>
+    <p>
+    I'm also a Linux expert, and I have contributed to many repositories of Debian, Ubuntu, Mint, etc with my software.</p>
+    <p>
+    I can speak and write English, and Spanish.
+    </p>
 
     <div class="container">
 
@@ -359,11 +371,12 @@
 
 
 
-                  <br>Bonus track :P<br>
+                  <!-- <br>Bonus track :P<br> -->
 
                   <!-- TODO do this canvas responsive to screen size, maybe add some mini game custom made -->
-                  <canvas id="responsive-canvas" style="width: 100%;"></canvas>
+                  <!-- <canvas id="responsive-canvas" style="width: 100%;"></canvas> -->
 
+                  <!-- TODO DEBUG DISABLED FOR NOW
                   <script>
                   // TODO resize properly , this was done in a rush : https://stackoverflow.com/questions/1664785/resize-html5-canvas-to-fit-window
                   // TODO move all this to a proper .js file
@@ -501,8 +514,12 @@
                     //ctx.strokeText(mensaje[mensaje_i], m_x, m_y);
                   }
 
+
                   setInterval(draw, 35); // start the show!
+
                   </script>
+                -->
+
                 </div>
               </body>
               </html>
