--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/lux/bootstrap.min.css">
 
-<title>Álvaro González Ferrer - developer page</title>
+<title>Álvaro González Ferrer - Portfolio - Developer</title>
 </head>
 <body>
   <div class="container">
