--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body>
   <div class="container">
     <h1>Álvaro González Ferrer</h1>
-    <h2>Graduated in Computer Science</h2>
+    <h2>Software developer</h2>
 
     <p>
     Thanks for visiting my page!</p>
     <p>
     Im Álvaro, also known as Krono, Kronopio and many others "noms de guerre".</p>
     <p>
-    Have been developing software since I was a kid, starting in a old Commodore 64.</p>
+    I have been developing software since I was a kid, starting in a old Commodore 64.</p>
     <p>
     I'm a Computer Science graduate from Argentina, game developer, and hobbyist with many interests..</p>
     <p>
@@ -34,13 +34,11 @@
 
     <p>Some of my repositories, I'm always releasing new code, check it often!</p>
 
-    <p>
-      <a href="https://github.com/alvarogonzalezferrer" class="btn btn-primary" target='_blank'>GitHub</a>
+    <p><a href="https://github.com/alvarogonzalezferrer" class="btn btn-primary btn-block" target='_blank'>GitHub</a></p>
 
-      <a href="https://sourceforge.net/u/kronopio/profile/" class="btn btn-primary" target='_blank'>Sourceforge</a>
+    <p><a href="https://sourceforge.net/u/kronopio/profile/" class="btn btn-primary btn-block" target='_blank'>Sourceforge</a></p>
 
-      <a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary" target='_blank'>LinkedIn</a>
-    </p>
+    <p><a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary btn-block" target='_blank'>LinkedIn</a></p>
 
     <h2>Portfolio</h2>
 
