new projects + photo
new projects

--- a/index.html
+++ b/index.html
@@ -16,21 +16,13 @@
     <h1>Álvaro González Ferrer</h1>
     <h2>Software developer</h2>
 
-    <p>
-    Thanks for visiting my page!</p>
-    <p>
-    Im Álvaro, also known as Krono, Kronopio and many others "noms de guerre".</p>
-    <p>
-    I have been developing software since I was a kid, starting in a old Commodore 64.</p>
-    <p>
-    I'm a Computer Science graduate from Argentina, game developer, and hobbyist with many interests..</p>
-    <p>
-    I have many years of experience as indie game developer, and also developed for some very known game studios, and business software for small enterprises.</p>
-    <p>
-    I often release source code of my projects, when I have the proper license to do so.</p>
-    <p>
-    Many others of my projects are protected by non-disclosure agreements, and I cannot release them.
-    </p>
+    <p>Im Álvaro, also known as Krono, Kronopio and many others "noms de guerre".</p>
+    <p>I have been developing software since I was a kid, starting in a old Commodore 64.</p>
+    <p>I'm a Computer Science graduate from Argentina, game developer, and hobbyist with many interests..</p>
+    <p>I have many years of experience as indie game developer, and also developed for some very known game studios, and business software for small enterprises.</p>
+    <p>I often release source code of my projects, when I have the proper license to do so.</p>
+    <p>Many others of my projects are protected by non-disclosure agreements, and I cannot release them.</p>
+    <p>Thanks for visiting my page!</p>
 
     <p>Some of my repositories, I'm always releasing new code, check it often!</p>
 
@@ -342,7 +334,7 @@
                               Lookin' for adventure,
                               And whatever comes our way
                             </div>
-                            <img src="screens/harley.jpg" class="card-img-top" alt="Open Source">
+                            <img src="screens/harley.jpg" class="card-img-top" alt="Harley">
                             <div class="card-body">
                               <h5 class="card-title">Harley Davidson Argentina tips & tricks</h5>
                               <p class="card-text">
@@ -364,6 +356,60 @@
                         </div>
                       </div>
                       <!-- end row -->
+
+                      <!-- row -->
+                      <BR>
+                        <div class="row">
+                          <div class="col-sm-6">
+                            <div class="card h-100">
+                              <div class="card-header">
+                                Affordable ERP system for small companies
+                              </div>
+                              <img src="screens/burocracia.jpg" class="card-img-top" alt="ERP system">
+                              <div class="card-body">
+                                <h5 class="card-title">ERP system</h5>
+                                <p class="card-text">
+                                  In house 100% developed from scratch ERP (enterprise resource planning) for small companies at Buenos Aires.
+                                  <br>
+                                  The system manages all for the company: clients, reports, roadmaps, business resources, orders, receipts, purchase orders, and payroll.
+                                  <br>
+                                  Developed from scratch using PHP, MySQL, HTML5, Javascript and CSS, running on a Linux Apache web server,
+                                  <br>
+                                  This system really improved the productivity of the small company, maximizing their profits and reducing costs. The ERP system integrates varied organizational systems and facilitates error-free transactions and production, thereby enhancing the organization's efficiency.
+                                  <br>
+                                  Soon I will be releasing original source code from this project, a total open source ERP solution, 100% developed by me, specially targeted to small companies that can't afford very costly solutions like SAP, Oracle, IBM, etc solutions...
+                                  <br><br>
+                                  NOTE: all data shown on screenshoot is fictional RANDOM data generated for a test system. No private data was shown.
+                                </p>
+
+                                <a href="https://github.com/alvarogonzalezferrer/" class="btn btn-primary" target='_blank'>Coming soon!</a>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-sm-6">
+                            <div class="card h-100">
+                              <div class="card-header">
+                                Thanks for reading!
+                              </div>
+                              <img src="screens/krono.jpg" class="card-img-top" alt="Krono">
+                              <div class="card-body">
+                                <h5 class="card-title">More projects coming soon!</h5>
+                                <p class="card-text">
+                                  Thank you for reading my page.
+                                  <br>
+                                  I always have new stuff coming up, so check it often!
+                                  <br>
+                                  Don't hesitate to contact me! On GitHub, LinkedIn, etc!
+                                </p>
+                                <p>
+                                  <a href="https://github.com/alvarogonzalezferrer/" class="btn btn-primary" target='_blank'>Coming soon!</a>
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- end row -->
 
                   </div>
 
