new info, betterr pics
new info

--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap CSS -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
--->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/lux/bootstrap.min.css">
-
 <title>Álvaro González Ferrer - Portfolio - Developer</title>
 </head>
 <body>
@@ -18,13 +13,13 @@
 
     <p>Im Álvaro, also known as Krono, Kronopio and many others "noms de guerre".</p>
     <p>I have been developing software since I was a kid, starting in a old Commodore 64.</p>
-    <p>I'm a Computer Science graduate from Argentina, game developer, and hobbyist with many interests..</p>
-    <p>I have many years of experience as indie game developer, and also developed for some very known game studios, and business software for small enterprises.</p>
-    <p>I often release source code of my projects, when I have the proper license to do so.</p>
-    <p>Many others of my projects are protected by non-disclosure agreements, and I cannot release them.</p>
+    <p>I'm a Computer Science graduate from Argentina, game developer, and hobbyist with many interests.</p>
+    <p>I have almost two decades of experience as a game developer, building Indie games, as well as large game studios.  In addition, I have  many years of experience building business software for small enterprises, and even translation engines.</p>
+    <p>I release source code of my projects when I have the license, but many others of my projects are protected by non-disclosure agreements, therefore cannot release them.</p>
+
     <p>Thanks for visiting my page!</p>
 
-    <p>Some of my repositories, I'm always releasing new code, check it often!</p>
+    <p>Below are some of my repositories and since I'm always releasing new code, check it often!</p>
 
     <p><a href="https://github.com/alvarogonzalezferrer" class="btn btn-primary btn-block" target='_blank'>GitHub</a></p>
 
@@ -34,16 +29,13 @@
 
     <h2>Portfolio</h2>
 
-    <p>I have worked on many, many, many diverse projects.</p>
-    <p>
-    This are just a few, the featured ones are mostly released freely to the public as open source software. </p>
-    <p>
-    Some of my skills are: C++, Java, Javascript, PHP, MySQL, MongoDB, Node.js, Express, Angular.js, jQuery, Bootstrap, HTML5, CSS, Pascal, BASIC, etc. </p>
-    <p>
-    I'm also a Linux expert, and I have contributed to many repositories of Debian, Ubuntu, Mint, etc with my software.</p>
-    <p>
-    I can speak and write English, and Spanish.
-    </p>
+    <p>I have an extremely diverse project portfolio, but below are a few. The featured projects below are released freely to the public, as open source software.</p>
+
+    <p>Skills include: C++, Java, Javascript, PHP, MySQL, MongoDB, Node.js, Express, Angular.js, jQuery, Bootstrap, HTML5, CSS, Pascal, BASIC, etc.</p>
+
+    <p>I'm a Linux expert and contributed to Debian, Ubuntu, Mint and more global repositories.</p>
+
+    <p>I can speak and write English and Spanish.</p>
 
     <div class="container">
 
@@ -64,8 +56,10 @@
                 <br> Done in C++, closs platform.
                 <br> Works in MS DOS, Linux, Windows and more!
                 <br>Also available from Linux repositories like Ubuntu, Debian, etc</p>
-                <a href="https://sourceforge.net/projects/kball/" class="btn btn-primary" target='_blank'>Go to KBall!</a>
               </div>
+
+              <a href="https://sourceforge.net/projects/kball/" class="btn btn-primary mt-auto" target='_blank'>Go to KBall!</a>
+
             </div>
           </div>
 
@@ -83,8 +77,10 @@
                   This is a full game with massive destruction, powerful weapons, and high speed action in varied levels.
                   <br>
                   Works in MS DOS, Linux, Windows and more! You can also download it from Linux repositories like Ubuntu, Debian, etc</p>
-                  <a href="https://sourceforge.net/projects/kraptor/" class="btn btn-primary" target='_blank'>Get Kraptor!</a>
                 </div>
+
+                <a href="https://sourceforge.net/projects/kraptor/" class="btn btn-primary mt-auto" target='_blank'>Get Kraptor!</a>
+
               </div>
             </div>
           </div>
@@ -106,8 +102,9 @@
                       <br>A work of friendship, was done from scratch in about one week. Includes sound, very cool effects and graphics.
                     </p>
 
-                    <a href="https://github.com/alvarogonzalezferrer/Blast-Nacho" class="btn btn-primary" target='_blank'>Nacho BLASTER!</a>
                   </div>
+                  <a href="https://github.com/alvarogonzalezferrer/Blast-Nacho" class="btn btn-primary mt-auto" target='_blank'>Nacho BLASTER!</a>
+
                 </div>
               </div>
 
@@ -129,8 +126,9 @@
                       <br>
                       To play it, use MS-DOS, or an emulator like DOSBOX ... there are compiled binaries and two graphic adventures, a short demo, and a complete graphic adventure to play!
                     </p>
-                    <a href="https://github.com/alvarogonzalezferrer/aventura_grafica" class="btn btn-primary" target='_blank'>Time for adventure!</a>
                   </div>
+                  <a href="https://github.com/alvarogonzalezferrer/aventura_grafica" class="btn btn-primary mt-auto" target='_blank'>Time for adventure!</a>
+
                 </div>
               </div>
             </div>
@@ -155,8 +153,9 @@
                         Breakout was the basis and inspiration for certain aspects of the Apple II personal computer. In 1978, the game was ported to the Atari 2600 and a sequel was made, Super Breakout, which four years later became the "pack-in game" for the Atari 5200 console. Breakout spawned an entire genre of Breakout clones, and the concept found new legs with Taito's 1986 Arkanoid, which itself spawned dozens of imitators.
                       </p>
 
-                      <a href="https://github.com/alvarogonzalezferrer/kronoide" class="btn btn-primary" target='_blank'>Retro fun awaits!</a>
                     </div>
+                    <a href="https://github.com/alvarogonzalezferrer/kronoide" class="btn btn-primary mt-auto" target='_blank'>Retro fun awaits!</a>
+
                   </div>
                 </div>
 
@@ -177,8 +176,9 @@
                         To play it, use MS-DOS, or an emulator like DOSBOX ...
                         <br>Note, there used to be a version that lets you play against the computer too (and not only humans), sadly was lost in some crashed diskettes. Will be re-done soon.
                       </p>
-                      <a href="https://github.com/alvarogonzalezferrer/ktank" class="btn btn-primary" target='_blank'>Play with friends!</a>
                     </div>
+                    <a href="https://github.com/alvarogonzalezferrer/ktank" class="btn btn-primary mt-auto" target='_blank'>Play with friends!</a>
+
                   </div>
                 </div>
               </div>
@@ -197,19 +197,16 @@
                         <h5 class="card-title">KronoDataGrid</h5>
                         <p class="card-text">
                           I needed a lightweight data grid for some commercial projects, and all were very bloated and expensive, so I developed this super light weight data grid.
+                          <br>
                           Useful things in this project:
                           <ul>
-                            <li>
-                              A data grid with editable tools, kronoDataGrid.php, very light weight</li>
-                              <li>  A RANDOM name and surname generator for your projects, in install/index.php and supporting files.</li>
-                              <li>  A very lightweight MySQL connect wrapper. Check connectMySQL.php</li>
+                            <li>A data grid with editable tools, kronoDataGrid.php</li>
+                              <li>RANDOM name and surname generator for your projects, in install/index.php and supporting files.</li>
+                              <li>Lightweight MySQL connect wrapper -  Check connectMySQL.php</li>
                             </ul>
-
-                            You dont need bloated code to be productive.
                           </p>
-
-                          <a href="https://github.com/alvarogonzalezferrer/kronodatagrid" class="btn btn-primary" target='_blank'>Datagrid for you!</a>
                         </div>
+                        <a href="https://github.com/alvarogonzalezferrer/kronodatagrid" class="btn btn-primary mt-auto" target='_blank'>Datagrid for you!</a>
                       </div>
                     </div>
 
@@ -229,8 +226,9 @@
                             It can run even in a 386 with 1mb RAM and no HD
                             It fits on a diskette! Recycle your old PC! Inspired on micro kernels such as QNX, but the code is 100% my production, not based on any other kernels.
                           </p>
-                          <a href="https://sourceforge.net/projects/kronojunior/" class="btn btn-primary" target='_blank'>Retro fun!</a>
                         </div>
+                        <a href="https://sourceforge.net/projects/kronojunior/" class="btn btn-primary mt-auto" target='_blank'>Retro fun!</a>
+
                       </div>
                     </div>
                   </div>
@@ -269,8 +267,9 @@
                               +60 instruments: guitarra, bajo, Balalaika, bandola, banjo, Bozouki, Cavaquinho,Charango, cuatro, dulcimer, guitarra portuguesa, guitarron, hawayana, flamenca, jarana, laud, mandola, mandolina, sitar, timple, tres, ukelele, vihuela, etc
                             </p>
 
-                            <a href="https://github.com/alvarogonzalezferrer/kronognuguitarra" class="btn btn-primary" target='_blank'>Time for a virtuos solo!</a>
                           </div>
+                          <a href="https://github.com/alvarogonzalezferrer/kronognuguitarra" class="btn btn-primary mt-auto" target='_blank'>Time for a virtuos solo!</a>
+
                         </div>
                       </div>
 
@@ -279,7 +278,7 @@
                           <div class="card-header">
                             Always releasing new code for the benefit of the people.
                           </div>
-                          <img src="screens/opensource.png" class="card-img-top" alt="Open Source">
+                          <img src="screens/opensource.jpg" class="card-img-top" alt="Open Source">
                           <div class="card-body">
                             <h5 class="card-title">GitHub & SourceForge</h5>
                             <p class="card-text">
@@ -287,16 +286,17 @@
                               You can find more of my works, ideas, projects, and hobbies and my GitHub, SourceForge and LinkedIn pages.<br>
                               Soon I will be updating also my hardware projects.<br>
                             </p>
-                            <p>
-                              <a href="https://github.com/alvarogonzalezferrer" class="btn btn-primary" target='_blank'>GitHub</a>
-                            </p>
-                            <p>
-                              <a href="https://sourceforge.net/u/kronopio/profile/" class="btn btn-primary" target='_blank'>Sourceforge</a>
-                            </p>
-                            <p>
-                              <a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary" target='_blank'>LinkedIn</a>
-                            </p>
+
                           </div>
+
+                            <a href="https://github.com/alvarogonzalezferrer" class="btn btn-primary mt-auto" target='_blank'>GitHub</a>
+
+
+                            <a href="https://sourceforge.net/u/kronopio/profile/" class="btn btn-primary mt-auto" target='_blank'>Sourceforge</a>
+
+
+                            <a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary mt-auto" target='_blank'>LinkedIn</a>
+
                         </div>
                       </div>
                     </div>
@@ -310,7 +310,7 @@
                             <div class="card-header">
                               College notes: Spanish content. CONTENIDO EN ESPAÑOL.
                             </div>
-                            <img src="screens/uade.png" class="card-img-top" alt="UADE">
+                            <img src="screens/uade.jpg" class="card-img-top" alt="UADE">
                             <div class="card-body">
                               <h5 class="card-title">College notes</h5>
                               <p class="card-text">
@@ -321,8 +321,9 @@
                                 I am always ready to share the information, and help future professionals.
                               </p>
 
-                              <a href="https://github.com/alvarogonzalezferrer/UADE_apuntes_licenciatura_informatica" class="btn btn-primary" target='_blank'>Get your notes!</a>
                             </div>
+                            <a href="https://github.com/alvarogonzalezferrer/UADE_apuntes_licenciatura_informatica" class="btn btn-primary mt-auto" target='_blank'>Get your notes!</a>
+
                           </div>
                         </div>
 
@@ -348,10 +349,10 @@
                                 <br>
                                 SPANISH CONTENT ahead.
                               </p>
-                              <p>
-                                <a href="https://github.com/alvarogonzalezferrer/harley_alternativas_argentina" class="btn btn-primary" target='_blank'>Get your motor runnin'</a>
-                              </p>
+
                             </div>
+                            <a href="https://github.com/alvarogonzalezferrer/harley_alternativas_argentina" class="btn btn-primary mt-auto" target='_blank'>Get your motor runnin'</a>
+
                           </div>
                         </div>
                       </div>
@@ -382,8 +383,9 @@
                                   NOTE: all data shown on screenshoot is fictional RANDOM data generated for a test system. No private data was shown.
                                 </p>
 
-                                <a href="https://github.com/alvarogonzalezferrer/" class="btn btn-primary" target='_blank'>Coming soon!</a>
                               </div>
+                              <a href="https://github.com/alvarogonzalezferrer/" class="btn btn-primary mt-auto" target='_blank'>Coming soon!</a>
+
                             </div>
                           </div>
 
@@ -402,10 +404,10 @@
                                   <br>
                                   Don't hesitate to contact me! On GitHub, LinkedIn, etc!
                                 </p>
-                                <p>
-                                  <a href="https://github.com/alvarogonzalezferrer/" class="btn btn-primary" target='_blank'>Coming soon!</a>
-                                </p>
+
                               </div>
+                              <a href="https://github.com/alvarogonzalezferrer/" class="btn btn-primary mt-auto" target='_blank'>Coming soon!</a>
+
                             </div>
                           </div>
                         </div>
