--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>I have been developing software since I was a kid, starting on an old Commodore 64.</p>
     <p>I'm a Computer Science graduate from Argentina, game developer, and hobbyist with many interests.</p>
     <p>I have almost two decades of experience as a game developer, building Indie games, as well as large game studios.  In addition, I have  many years of experience building business software for small enterprises, and even translation engines.</p>
-    <p>I release source code of my projects when I have the license, but many others of my projects are protected by non-disclosure agreements, therefore cannot release them.</p>
+    <p>I release source code of my projects when I have the license, but many of my other projects are protected by non-disclosure agreements, therefore I cannot release them.</p>
 
     <p>Thanks for visiting my page!</p>
 
