--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <p>I have an extremely diverse project portfolio, but below are a few. The featured projects below are released freely to the public, as open source software.</p>
 
-    <p>Skills include: C++, Java, Javascript, PHP, MySQL, MongoDB, Node.js, Express, Angular.js, jQuery, Bootstrap, HTML5, CSS, Pascal, BASIC, etc.</p>
+    <p>Skills include: C++, Java, Javascript, PHP, SQL server / MySQL, MongoDB, Node.js, Express, Angular.js, jQuery, Bootstrap, HTML5, CSS, Pascal, BASIC, etc.</p>
 
     <p>I'm a Linux expert and contributed to Debian, Ubuntu, Mint and more global repositories.</p>
 
